# Wasmore

./: .gitignore  .pnp.cjs  Dockerfile  Makefile  README.md  jest.config.js  package-lock.json  package.json
.github/workflows/: test.yml
__tests__/: _setup.js
bench/: bench-pararell.py  bench.py  evaluation-metrix-loop.py  evaluation-metrix-task.py  evaluation-metrix.py  merge-results-csv.py  method-bench-pararell.sh  method-bench.sh
bench/result-pararell/: proposed-heavy-living-containers.csv  proposed-heavy.csv  proposed-light-92-1-pararell.csv  proposed-light-92-10-pararell.csv  proposed-light-92-100-pararell.csv  proposed-light-92-11-pararell.csv  proposed-light-92-12-pararell.csv  proposed-light-92-13-pararell.csv  proposed-light-92-14-pararell.csv  proposed-light-92-15-pararell.csv  proposed-light-92-16-pararell.csv  proposed-light-92-17-pararell.csv  proposed-light-92-18-pararell.csv  proposed-light-92-19-pararell.csv  proposed-light-92-2-pararell.csv  proposed-light-92-20-pararell.csv  proposed-light-92-21-pararell.csv  proposed-light-92-22-pararell.csv  proposed-light-92-23-pararell.csv  proposed-light-92-24-pararell.csv  proposed-light-92-25-pararell.csv  proposed-light-92-26-pararell.csv  proposed-light-92-27-pararell.csv  proposed-light-92-28-pararell.csv  proposed-light-92-29-pararell.csv  proposed-light-92-3-pararell.csv  (+181 more)
faas-app/: Cargo.toml
faas-app/src/: bin.rs  lib.rs  nbody.rs
server/: controller.js  index.js  index.test.js  invoker.js  invoker.test.js
utils/: container.js  container.test.js  perf.js  socket.js  stream.js  wait.js
(+789 files in other folders)
